--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,9 +1,18 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        {
+            "name": "Flutter: Attach to Device",
+            "type": "dart",
+            "request": "attach"
+        },
+        {
+            "name": "Flutter",
+            "type": "dart",
+            "request": "launch",
+            "program": "lib/main.dart",
+            "flutterMode": "profile"
+        },
         {
             "name": "simple_ecomrece_app_1",
             "request": "launch",
@@ -20,6 +29,18 @@
             "request": "launch",
             "type": "dart",
             "flutterMode": "release"
+        },
+        {
+            "name": "simple_ecomrece_app_1 (Flutter Tests)",
+            "program": "test",
+            "request": "launch",
+            "type": "dart"
+        },
+        {
+            "name": "simple_ecomrece_app_1 (Flutter Tests)",
+            "program": "test",
+            "request": "launch",
+            "type": "dart"
         }
     ]
 }
